data/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-couchdb-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
      - name: go-api
        image: ghcr.io/mchellmer/go-couchdb-api:latest
        ports:
        - containerPort: 8080
