data/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  labels:
    app: eightbitsaxlounge
    component: api
    environment: dev
spec:
  selector:
    app: eightbitsaxlounge
    component: api
    environment: dev
  ports:
  - port: 80
    targetPort: 8080
